--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "roman-numerals",
-  "version": "1.1.0",
+  "name": "rpg",
+  "version": "1.0.0",
   "description": "",
   "main": "main.js",
   "scripts": {
